--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 			<h1>I'm Aarav</h1>
 			<h2 class="code">a <span class="pro">code</span>r.</h2>
 			<img class="bottom-cloud" src="images/cloud.png" alt="Colud Image">
-			<img src="images/mountain.png" alt="Mounatin Image">
+			<img src="images/me2.png" alt="Mounatin Image">
 		</div>
 		<div class="middle-container">
 		<div class="profile">
-			<img src="images/me.jpg" alt="A picture of me">
+			<!-- <img src="images/me2.png" alt="A picture of me"> -->
 			<h2>Hello</h2>
 			<p class="intro">I am a 5th grade coder who is enrolled in CS50 and a London App Brewery course.</p>
 		</div>
