Update title and SEO stuff.
Made the title more descriptive and tried to boost my Lighthouse score

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="My Web Portfolio">
 		<title>Aarav Juneja</title>
 		<link rel="stylesheet" href="./css/master.css">
 		<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
@@ -11,8 +13,8 @@
 		<div class="top-container">
 			<img class="top-cloud" src="images/cloud.png" alt="cloud image">
 			<h1>I'm Aarav</h1>
-			<h2 class="code">a <span class="pro">code</span>r.</h2>
-			<img class="bottom-cloud" src="images/cloud.png" alt="Colud Image">
+			<h2 class="code descript">a 6th grade programmer and future entrepreneur.</h2>
+			<img class="bottom-cloud" src="images/cloud.png" alt="Cloud Image">
 			<img src="images/me2.png" alt="Mounatin Image">
 		</div>
 		<div class="middle-container">
