--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="My Web Portfolio">
 		<title>Aarav Juneja</title>
-		<link rel="stylesheet" href="./css/master.css">
+		<link rel="stylesheet" href="./css/master.min.css">
 		<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 		<link rel="icon" href="favicon.ico">
 	</head>
@@ -62,6 +62,6 @@
 		<p>© <span id="date"></span> Aarav Juneja.</p>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-		<script src="./js/index.js"></script>
+		<script src="./js/index.min.js"></script>
 	</body>
 </html>
