--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div class="profile">
 			<!-- <img src="images/me2.png" alt="A picture of me"> -->
 			<h2>Hello</h2>
-			<p class="intro">I am a 5th grade coder who is enrolled in CS50 and a London App Brewery course.</p>
+			<p class="intro">I am a 6th grade coder who is enrolled in CS50 and a London App Brewery course.</p>
 		</div>
 		<hr>
 		<h2>My Skills.</h2>
@@ -57,7 +57,7 @@
 			<li class="skill-row">
 				<img class="odd" src="images/CS50AI.webp" alt="CS50 AI">
 				<h3>CS50 AI</h3>
-				<p class="odd-skill-paragraph">This was my next big step with technology. After less then one and a half years, I finished CS50 AI. This went through search algorithims through neural networks and and NLP(Naturl Language Processing)</p>
+				<p class="odd-skill-paragraph">This was my next big step with technology. After less then one and a half years, I finished CS50 AI. This went through search algorithims through neural networks and and NLP(Natural Language Processing)</p>
 			</li>
 		</ul>
 		<hr>
