--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<!-- <link rel="preload" href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'"> -->
 		<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 		<link rel="icon" href="favicon.ico">
+		<link rel="manifest" href="app.webmanifest">
 
 		<noscript>
 			<!-- <link rel="stylesheet" 
