--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="My Web Portfolio">
+		<meta name="theme-color" content="#e4f9f5">
 		<meta http-equiv="Content-Security-Policy" content="
 				default-src 'self'; 
 				script-src 'self' https://ajax.googleapis.com 'unsafe-inline'; 
@@ -73,7 +74,7 @@
 		<a class="footer-link" href="https://www.linkedin.com/aarav-juneja">LinkedIn</a>
 		<p>© <span id="date"></span> Aarav Juneja.</p>
 		</div>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-		<script src="./js/index.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
+		<script src="./js/index.min.js" defer></script>
 	</body>
 </html>
