--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<p class="even-skill-paragraph">This is my biggest skill. Some languages I code in include HTML, CSS, and Javascript. I also know Python, Bootstrap, and a bit of Java</p>
 			</li>
 			<li class="skill-row">
-				<img class="odd" src="images/chillies.png" alt="The London App Brewery">
+				<img class="odd" src="images/london.png" alt="The London App Brewery">
 				<h3>The Complete Web Development BootCamp</h3>
 				<p class="odd-skill-paragraph">In all of the courses I took, I feel that this course has taught me the bost compared to any other. 
 					I went from the basics of this literal site to deepest methods of security with Google OAuth. 
