--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		</div>
 		<div class="bottom-container">
 		<a class="footer-link" href="https://www.linkedin.com/aarav-juneja">LinkedIn</a>
-		<p>© <span id="date"></span> Aarav Juneja.</p>
+		<p class="copyright">© <span id="date"></span> Aarav Juneja.</p>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
 		<script src="./js/index.min.js" defer></script>
