Add Aspect Ratio
Added the true width and height for all images inline, so the browser can calculate aspect ratios. Then use height auto to overwrite them, because width is specific.

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 	</head>
 	<body>
 		<div class="top-container">
-			<img class="top-cloud" src="images/cloud.png" alt="cloud image">
+			<img class="top-cloud" src="images/cloud.png" alt="cloud image" width="150" height="48">
 			<h1>I'm Aarav</h1>
 			<h2 class="code descript">a 6th grade programmer and future entrepreneur.</h2>
-			<img class="bottom-cloud" src="images/cloud.png" alt="Cloud Image">
-			<img src="images/me2.png" alt="Mounatin Image">
+			<img class="bottom-cloud" src="images/cloud.png" alt="Cloud Image" width="150" height="48">
+			<img src="images/me2.png" alt="Mounatin Image" width="233" height="233"> 
 		</div>
 		<div class="middle-container">
 		<div class="profile">
@@ -42,19 +42,19 @@
 		<h2>My Skills.</h2>
 		<ul class="skills">
 			<li class="skill-row">
-				<img class="even" src="images/computer.png" alt="A computer">
+				<img class="even" src="images/computer.png" alt="A computer" width="400" height="400">
 				<h3>Coding</h3>
 				<p class="even-skill-paragraph">This is my biggest skill. Some languages I code in include HTML, CSS, and Javascript. I also know Python, Bootstrap, and a bit of Java</p>
 			</li>
 			<li class="skill-row">
-				<img class="odd" src="images/london.png" alt="The London App Brewery">
+				<img class="odd" src="images/london.png" alt="The London App Brewery" width="280" height="280">
 				<h3>The Complete Web Development BootCamp</h3>
 				<p class="odd-skill-paragraph">In all of the courses I took, I feel that this course has taught me the bost compared to any other. 
 					I went from the basics of this literal site to deepest methods of security with Google OAuth. 
 					I made multiple servers using Node.js and deployed some on Heroku. I got this very domain and set it up for many future things to come.</p>
 			</li>
 			<li class="skill-row">
-				<img class="even" src="images/CS50X.jpg" alt="CS50x">
+				<img class="even" src="images/CS50X.jpg" alt="CS50x" width="623" height="350">
 				<h3>CS50x</h3>
 				<p class="even-skill-paragraph">CS50 is Harvard course that I finished when I was ten. It had multiple problem sets building up from the core of binary all the way to web servers with python.</p>
 			</li>
